# cnstats

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  a.json  a.py  money_supply.py  pyproject.toml  requirements.txt  setup.py  zbcode.py
.github/workflows/: publish.yml  test.yml
cn_stats.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cnstats/: __main__.py  common.py  regcode.py  stats.py  zbcode.py
src/cnstats/: __init__.py
tests/: conftest.py  test_api_vcr.py  test_cli_vcr.py  test_regcode_vcr.py  test_smoke.py  test_table_format.py  test_zbcode_vcr.py
tests/cassettes/test_api_vcr/: test_invalid_query.yaml  test_stats_as_df.yaml  test_stats_gdp.yaml  test_stats_industrial.yaml  test_stats_multi_period.yaml  test_stats_multi_zb.yaml  test_stats_with_reg.yaml  test_stats_with_reg_annual.yaml
tests/cassettes/test_cli_vcr/: test_cli_list_regcode.yaml  test_cli_reg_query.yaml  test_cli_simple_query.yaml  test_cli_tree_query.yaml
tests/cassettes/test_regcode_vcr/: test_get_reg_cities.yaml  test_get_reg_provinces.yaml
tests/cassettes/test_zbcode_vcr/: test_get_tree.yaml
